--- a/Plum/Base.lproj/Main.storyboard
+++ b/Plum/Base.lproj/Main.storyboard
@@ -1102,6 +1102,9 @@
                                 <state key="normal" title="Call">
                                     <color key="titleColor" red="1" green="0.2347312272" blue="0.31448560949999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="callButtonPressed:" destination="W8X-Yn-7KG" eventType="touchUpInside" id="zWo-Cf-kO0"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k1h-zR-UD3">
                                 <rect key="frame" x="18" y="111" width="178" height="52"/>
@@ -1120,6 +1123,9 @@ NY  10002, United States</string>
                                 <state key="normal" title="Direction">
                                     <color key="titleColor" red="1" green="0.2347312272" blue="0.31448560949999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="directionButtonPressed:" destination="W8X-Yn-7KG" eventType="touchUpInside" id="eI8-cx-4U4"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
